l1072 & l1073 #issues-content postion relative with -1 z-index

--- a/main.css
+++ b/main.css
@@ -1069,6 +1069,8 @@ input[type=checkbox]+label {
   color: var(--currant);
   margin: 50px 70px 0 30px;
   height: 1000px;
+  postion: relative;
+  z-index: -1;
 }
 
 #issues-content #title {
